Added linux fixes

--- a/webapp/src/app/ph-elements/ph-button/ph-button.component.scss
+++ b/webapp/src/app/ph-elements/ph-button/ph-button.component.scss
@@ -16,9 +16,18 @@
         user-select: none;
     }
 
+    div.label:hover {
+        color: #ffffff;
+    }
+
     div.label.active {
         background-color: #f8a403;
         color: #000000;
+    }
+
+    div.label.active:hover {
+        background-color: #f8a403;
+        color: #ffffff;
     }
 
 }
