--- a/webapp/src/app/ph-elements/ph-table/ph-table.component.scss
+++ b/webapp/src/app/ph-elements/ph-table/ph-table.component.scss
@@ -48,6 +48,10 @@
             font-weight: 400;
         }
 
+        tr:hover {
+            background-color: #313133;
+        }
+
         tr td {
             padding: 2px;
         }
