--- a/webapp/src/app/dashboard/dashboard.component.html
+++ b/webapp/src/app/dashboard/dashboard.component.html
@@ -4,19 +4,19 @@
 
     <div class="content">
         <div class="workspace">
-            <ph-window [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/5; grid-column: 1/32">
+            <ph-window [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/5; grid-column: 1/38">
                 <app-power-plant></app-power-plant>
             </ph-window>
-            <ph-window [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:5/31; grid-column: 1/32">
+            <ph-window [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:5/36; grid-column: 1/38">
                 <app-power-control></app-power-control>
             </ph-window>
-            <ph-window [title]="'LOCKDOWN'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 32/52">
+            <ph-window *ngIf="auth.role == 'admin'" [title]="'LOCKDOWN'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 38/58">
                 <base-lockdown></base-lockdown>
             </ph-window>
-            <ph-window [title]="'ANNOUNCEMENT'" [subtitle]="'TR2805'" style="grid-row:6/19; grid-column: 32/52">
+            <ph-window *ngIf="auth.role == 'admin'" [title]="'ANNOUNCEMENT'" [subtitle]="'TR2805'" style="grid-row:6/19; grid-column: 38/58">
                 <speaker-announcements></speaker-announcements>
             </ph-window>
-            <ph-window [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:19/31; grid-column: 32/52">
+            <ph-window *ngIf="auth.role == 'admin'" [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:19/36; grid-column: 38/58">
                 <speaker-fluff></speaker-fluff>
             </ph-window>
         </div>
