--- a/webapp/src/app/drone-control/drone-control.component.html
+++ b/webapp/src/app/drone-control/drone-control.component.html
@@ -1,1 +1,10 @@
-<p>drone-control works!</p>
+<ph-form>
+    <ph-button-select [label]="'Mode silent'">
+        <ph-button [value]="'off'">NORMAL</ph-button>
+        <ph-button [value]="'on'">SILENT</ph-button>
+    </ph-button-select>
+    <ph-command-list [label]="'Pay explosion'">
+        <ph-button>OG</ph-button>
+        <ph-button>UG</ph-button>
+    </ph-command-list>
+</ph-form>
