--- a/webapp/src/app/base-lockdown/base-lockdown.component.html
+++ b/webapp/src/app/base-lockdown/base-lockdown.component.html
@@ -1,5 +1,5 @@
 <ph-form>
-    <ph-button-select [label]="'State'" [(value)]="baseState" (valueChange)="updateServerBaseState()">
+    <ph-button-select [label]="'State'" [(value)]="lockdownState" (valueChange)="updateServerBaseState()">
         <ph-button [value]="'lockdown'">LOCKDOWN</ph-button>
         <ph-button [value]="'normal'">NORMAL</ph-button>
     </ph-button-select>
