--- a/webapp/src/app/dashboard/dashboard.component.html
+++ b/webapp/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,14 @@
 <div class="dashboard">
-    <ph-topbar style="grid-row: 1; grid-column: 2;"></ph-topbar>
-    <ph-sidebar style="grid-row: 1 / 3; grid-column: 1;"></ph-sidebar>
+    <ph-topbar style="grid-row: 1; grid-column: 2;">
+        <ph-topbar-header [title]="'DHBRD'" [subtitle]="'GNRL'"></ph-topbar-header>
+        <ph-topbar-item [label]="'GNRL'"></ph-topbar-item>
+        <ph-topbar-item [label]="'DRONE'"></ph-topbar-item>
+    </ph-topbar>
+    <ph-sidebar style="grid-row: 1 / 3; grid-column: 1;">
+        <ph-sidebar-item>
+            DHBRD
+        </ph-sidebar-item>
+    </ph-sidebar>
 
     <div class="content">
         <div class="workspace">
