--- a/webapp/src/app/dashboard/dashboard.component.html
+++ b/webapp/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="dashboard">
     <ph-topbar style="grid-row: 1; grid-column: 2;">
-        <ph-topbar-header [title]="'DHBRD'" [subtitle]="'GNRL'"></ph-topbar-header>
-        <ph-topbar-item [label]="'GNRL'"></ph-topbar-item>
-        <ph-topbar-item [label]="'DRONE'"></ph-topbar-item>
+        <ph-topbar-header [title]="view" [subtitle]="tab"></ph-topbar-header>
+        <ph-topbar-item [label]="'GNRL'" (click)="this.tab='GNRL'"></ph-topbar-item>
+        <ph-topbar-item *ngIf="auth.role == 'admin'" [label]="'DRONE'" (click)="this.tab='DRONE'"></ph-topbar-item>
     </ph-topbar>
     <ph-sidebar style="grid-row: 1 / 3; grid-column: 1;">
         <ph-sidebar-item>
@@ -12,22 +12,22 @@
 
     <div class="content">
         <div class="workspace">
-            <ph-window [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/5; grid-column: 1/38">
+            <ph-window *ngIf="this.tab == 'GNRL'" [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/5; grid-column: 1/38">
                 <app-power-plant></app-power-plant>
             </ph-window>
-            <ph-window [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:5/36; grid-column: 1/38">
+            <ph-window *ngIf="this.tab == 'GNRL'" [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:5/36; grid-column: 1/38">
                 <app-power-control></app-power-control>
             </ph-window>
-            <ph-window *ngIf="auth.role == 'admin'" [title]="'LOCKDOWN'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 38/58">
+            <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'LOCKDOWN'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 38/58">
                 <base-lockdown></base-lockdown>
             </ph-window>
-            <ph-window *ngIf="auth.role == 'admin'" [title]="'ANNOUNCEMENT'" [subtitle]="'TR2805'" style="grid-row:6/19; grid-column: 38/58">
+            <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'ANNOUNCEMENT'" [subtitle]="'TR2805'" style="grid-row:6/19; grid-column: 38/58">
                 <speaker-announcements></speaker-announcements>
             </ph-window>
-            <ph-window *ngIf="auth.role == 'admin'" [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:19/36; grid-column: 38/58">
+            <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:19/36; grid-column: 38/58">
                 <speaker-fluff></speaker-fluff>
             </ph-window>
-            <ph-window *ngIf="auth.role == 'admin'" [title]="'DRONE'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 58/78">
+            <ph-window *ngIf="auth.role == 'admin' && this.tab == 'DRONE'" [title]="'DRONE'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 1/28">
                 <drone-control></drone-control>
             </ph-window>
         </div>
