--- a/webapp/src/app/power-control/power-control.component.scss
+++ b/webapp/src/app/power-control/power-control.component.scss
@@ -5,80 +5,6 @@
     align-items: center;
 }
 
-// @keyframes move1 {
-//     0% {
-//         opacity: 1;
-//         transform: translate3d(0, 0, 0);
-//     }
-//     50% {
-//         opacity: 1;
-//         transform: translate3d(-4.5%, 0, 0);
-//     }
-//     51% {
-//         opacity: 0;
-//     }
-//     100% {
-//         opacity: 0;
-//         transform: translate3d(0, 0, 0);
-
-//     }
-// }
-
-// @keyframes move2 {
-//     0% {
-//         opacity: 0;
-//     }
-//     49% {
-//         opacity: 0;
-//     }
-//     50% {
-//         opacity: 1;
-//         transform: translate3d(-0.08%, 0, 0);
-//     }
-//     100% {
-//         transform: translate3d(-5%, 0, 0);
-//     }
-// }
-
-// @keyframes move3 {
-//     0% { 
-//         transform: translate3d(0, 0, 0);
-//     }
-//     55% {
-//         transform: translate3d(0, -27.5%, 0);
-//     }
-//     100% {
-//         transform: translate3d(-13.4%, -27.5%, 0);
-//     }
-// }
-
-// @keyframes moveUG {
-//     0% { 
-//         transform: translate3d(0, 0, 0);
-//     }
-//     100% {
-//         transform: translate3d(71%, 0, 0);
-//     }
-// }
-
-// #Ebene_5 {
-//     animation: move1 2s  linear infinite;
-// }
-
-// #Ebene_4 {
-//     animation: move2 2s  linear infinite;
-//     opacity: 1;
-// }
-
-// #Ebene_7 {
-//     animation: move1 2s  linear infinite;
-// }
-
-// #Ebene_6 {
-//     animation: move2 2s  linear infinite;
-//     opacity: 1;
-// }
-
 .st2 {
     cursor: pointer;
 }
@@ -95,10 +21,10 @@
             transform: translate3d(0, 0, 0);
         }
         25% {
-            transform: translate3d(0, -6.4%, 0);
+            transform: translate3d(0, -5.68%, 0);
         }
         75% {
-            transform: translate3d(-9.83%, -6.4%, 0);
+            transform: translate3d(-9.83%, -5.68%, 0);
         }
         100% {
             transform: translate3d(-9.83%, 0, 0);
@@ -108,23 +34,27 @@
         display: block;
     }
     circle:nth-child(6) {
-        animation: cic-move 8s  linear infinite;
+        animation: cic-move 5s  linear infinite;
     }
     circle:nth-child(7) {
-        animation: cic-move 8s  linear infinite;
-        animation-delay: -1.6s;
+        animation: cic-move 5s  linear infinite;
+        animation-delay: -1s;
     }
     circle:nth-child(8) {
-        animation: cic-move 8s  linear infinite;
-        animation-delay: -3.2s;
+        animation: cic-move 5s  linear infinite;
+        animation-delay: -2s;
     }
     circle:nth-child(9) {
-        animation: cic-move 8s  linear infinite;
-        animation-delay: -4.8s;
+        animation: cic-move 5s  linear infinite;
+        animation-delay: -3s;
     }
     circle:nth-child(10) {
-        animation: cic-move 8s  linear infinite;
-        animation-delay: -6.4s;
+        animation: cic-move 5s  linear infinite;
+        animation-delay: -4s;
+    }
+    circle:nth-child(11) {
+        animation: cic-move 5s  linear infinite;
+        animation-delay: -5s;
     }
 }
 
@@ -149,15 +79,15 @@
     }
 
     circle:nth-child(4) {
-        animation: sci-move 4s  linear infinite;
+        animation: sci-move 2s  linear infinite;
     }
     circle:nth-child(5) {
-        animation: sci-move 4s  linear infinite;
-        animation-delay: -1.33s;
+        animation: sci-move 2s  linear infinite;
+        animation-delay: -1s;
     }
     circle:nth-child(6) {
-        animation: sci-move 4s  linear infinite;
-        animation-delay: -2.66s;
+        animation: sci-move 2s  linear infinite;
+        animation-delay: -2s;
     }
 }
 
@@ -173,97 +103,348 @@
             transform: translate3d(0, 0, 0);
         }
         55% {
-            transform: translate3d(0, -11.71%, 0);
+            transform: translate3d(0, -10.4%, 0);
         }
         100% {
-            transform: translate3d(-7.55%, -11.71%, 0);
+            transform: translate3d(-7.55%, -10.4%, 0);
         }
     }
     circle.st3:nth-child(1n + 5) {
         display: block;
     }
     circle:nth-child(5) {
-        animation: tec-move 8s  linear infinite;
+        animation: tec-move 5s  linear infinite;
     }
     circle:nth-child(6) {
-        animation: tec-move 8s  linear infinite;
-        animation-delay: -1.6s;
+        animation: tec-move 5s  linear infinite;
+        animation-delay: -1s;
     }
     circle:nth-child(7) {
-        animation: tec-move 8s  linear infinite;
-        animation-delay: -3.2s;
+        animation: tec-move 5s  linear infinite;
+        animation-delay: -2s;
     }
     circle:nth-child(8) {
-        animation: tec-move 8s  linear infinite;
-        animation-delay: -4.8s;
+        animation: tec-move 5s  linear infinite;
+        animation-delay: -3s;
     }
     circle:nth-child(9) {
-        animation: tec-move 8s  linear infinite;
-        animation-delay: -6.4s;
+        animation: tec-move 5s  linear infinite;
+        animation-delay: -4s;
+    }
+    circle:nth-child(10) {
+        animation: tec-move 5s  linear infinite;
+        animation-delay: -5s;
     }
 }
 
+#med {
+    circle.st3:nth-child(1n + 4) {
+        display: none;
+    }
+}
 
+#med.animate {
+    @keyframes med-move {
+        0% {
+            opacity: 1;
+            transform: translate3d(0, 0, 0);
+        }
+        100% {
+            transform: translate3d(-12.75%, 0, 0);
+        }
+    }
+    circle.st3:nth-child(1n + 4) {
+        display: block;
+    }
 
-// #UG1_P2 {
-//     circle {
-//         animation: moveUG 14s  linear infinite;
-//     }
-//     circle:nth-child(2) {
-//         animation-delay: -1.75s;
-//     }
-//     circle:nth-child(3) {
-//         animation-delay: -3.5s;
-//     }
-//     circle:nth-child(4) {
-//         animation-delay: -5.25s;
-//     }
-//     circle:nth-child(5) {
-//         animation-delay: -7s;
-//     }
-//     circle:nth-child(6) {
-//         animation-delay: -8.75s;
-//     }
-//     circle:nth-child(7) {
-//         animation-delay: -10.5s;
-//     }
-//     circle:nth-child(8) {
-//         animation-delay: -12.25s;
-//     }
-// }
+    circle:nth-child(4) {
+        animation: med-move 3s  linear infinite;
+    }
+    circle:nth-child(5) {
+        animation: med-move 3s  linear infinite;
+        animation-delay: -1s;
+    }
+    circle:nth-child(6) {
+        animation: med-move 3s  linear infinite;
+        animation-delay: -2s;
+    }
+    circle:nth-child(7) {
+        animation: med-move 3s  linear infinite;
+        animation-delay: -3s;
+    }
+}
 
-// #UG1_P1 {
-//     circle {
-//         animation: moveUG 14s  linear infinite;
-//     }
-//     circle:nth-child(2) {
-//         animation-delay: -1.75s;
-//     }
-//     circle:nth-child(3) {
-//         animation-delay: -3.5s;
-//     }
-//     circle:nth-child(4) {
-//         animation-delay: -5.25s;
-//     }
-//     circle:nth-child(5) {
-//         animation-delay: -7s;
-//     }
-//     circle:nth-child(6) {
-//         animation-delay: -8.75s;
-//     }
-//     circle:nth-child(7) {
-//         animation-delay: -10.5s;
-//     }
-//     circle:nth-child(8) {
-//         animation-delay: -12.25s;
-//     }
-// }
+#parcel_og {
+    circle.st3:nth-child(1n + 4) {
+        display: none;
+    }
+}
 
-// .hidden {
-//     display: none;
-// }
+#parcel_og.animate {
+    @keyframes parcel_og-move {
+        0% {
+            opacity: 1;
+            transform: translate3d(0, 0, 0);
+        }
+        100% {
+            transform: translate3d(-59.75%, 0, 0);
+        }
+    }
+    circle.st3:nth-child(1n + 4) {
+        display: block;
+    }
 
-// circle.btn {
-//     cursor: pointer;
-// }
+    circle:nth-child(5) {
+        animation: parcel_og-move 14s  linear infinite;
+    }
+    circle:nth-child(6) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -1s;
+    }
+    circle:nth-child(7) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -2s;
+    }
+    circle:nth-child(8) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -3s;
+    }
+    circle:nth-child(9) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -4s;
+    }
+    circle:nth-child(10) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -5s;
+    }
+    circle:nth-child(11) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -6s;
+    }
+    circle:nth-child(12) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -7s;
+    }
+    circle:nth-child(13) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -8s;
+    }
+    circle:nth-child(14) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -9s;
+    }
+    circle:nth-child(15) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -10s;
+    }
+    circle:nth-child(16) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -11s;
+    }
+    circle:nth-child(17) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -12s;
+    }
+    circle:nth-child(18) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -13s;
+    }
+    circle:nth-child(19) {
+        animation: parcel_og-move 14s  linear infinite;
+        animation-delay: -14s;
+    }
+}
+
+#fc {
+    circle.st3:nth-child(1n + 4) {
+        display: none;
+    }
+}
+
+#fc.animate {
+    @keyframes fc-move {
+        0% {
+            opacity: 1;
+            transform: translate3d(0, 0, 0);
+        }
+        100% {
+            transform: translate3d(-20.75%, 0, 0);
+        }
+    }
+    circle.st3:nth-child(1n + 4) {
+        display: block;
+    }
+
+    circle:nth-child(5) {
+        animation: fc-move 6s  linear infinite;
+    }
+    circle:nth-child(6) {
+        animation: fc-move 6s  linear infinite;
+        animation-delay: -1s;
+    }
+    circle:nth-child(7) {
+        animation: fc-move 6s  linear infinite;
+        animation-delay: -2s;
+    }
+    circle:nth-child(8) {
+        animation: fc-move 6s  linear infinite;
+        animation-delay: -3s;
+    }
+    circle:nth-child(9) {
+        animation: fc-move 6s  linear infinite;
+        animation-delay: -4s;
+    }
+    circle:nth-child(10) {
+        animation: fc-move 6s  linear infinite;
+        animation-delay: -5s;
+    }
+    circle:nth-child(11) {
+        animation: fc-move 6s  linear infinite;
+        animation-delay: -6s;
+    }
+}
+
+#adm {
+    circle.st3:nth-child(1n + 4) {
+        display: none;
+    }
+}
+
+#adm.animate {
+    @keyframes adm-move {
+        0% {
+            opacity: 1;
+            transform: translate3d(0, 0, 0);
+        }
+        100% {
+            transform: translate3d(-7.5%, 0, 0);
+        }
+    }
+    circle.st3:nth-child(1n + 4) {
+        display: block;
+    }
+
+    circle:nth-child(5) {
+        animation: adm-move 2s  linear infinite;
+    }
+    circle:nth-child(6) {
+        animation: adm-move 2s  linear infinite;
+        animation-delay: -1s;
+    }
+    circle:nth-child(7) {
+        animation: adm-move 2s  linear infinite;
+        animation-delay: -2s;
+    }
+}
+
+#messhall {
+    circle.st3:nth-child(1n + 4) {
+        display: none;
+    }
+}
+
+#messhall.animate {
+    @keyframes messhall-move {
+        0% {
+            opacity: 1;
+            transform: translate3d(0, 0, 0);
+        }
+        100% {
+            transform: translate3d(0, 16.0%, 0);
+        }
+    }
+    circle.st3:nth-child(1n + 4) {
+        display: block;
+    }
+
+    circle:nth-child(5) {
+        animation: messhall-move 4s  linear infinite;
+    }
+    circle:nth-child(6) {
+        animation: messhall-move 4s  linear infinite;
+        animation-delay: -1s;
+    }
+    circle:nth-child(7) {
+        animation: messhall-move 4s  linear infinite;
+        animation-delay: -2s;
+    }
+    circle:nth-child(8) {
+        animation: messhall-move 4s  linear infinite;
+        animation-delay: -3s;
+    }
+    circle:nth-child(9) {
+        animation: messhall-move 4s  linear infinite;
+        animation-delay: -4s;
+    }
+}
+
+#gate {
+    circle.st3:nth-child(1n + 4) {
+        display: none;
+    }
+}
+
+#gate.animate {
+    @keyframes gate-move {
+        0% {
+            opacity: 1;
+            transform: translate3d(0, 0, 0);
+        }
+        100% {
+            transform: translate3d(0, 19.8%, 0);
+        }
+    }
+    circle.st3:nth-child(1n + 4) {
+        display: block;
+    }
+
+    circle:nth-child(5) {
+        animation: gate-move 4s  linear infinite;
+    }
+    circle:nth-child(6) {
+        animation: gate-move 4s  linear infinite;
+        animation-delay: -1s;
+    }
+    circle:nth-child(7) {
+        animation: gate-move 4s  linear infinite;
+        animation-delay: -2s;
+    }
+    circle:nth-child(8) {
+        animation: gate-move 4s  linear infinite;
+        animation-delay: -3s;
+    }
+    circle:nth-child(9) {
+        animation: gate-move 4s  linear infinite;
+        animation-delay: -4s;
+    }
+}
+
+#log {
+    circle.st3:nth-child(1n + 4) {
+        display: none;
+    }
+}
+
+#log.animate {
+    @keyframes log-move {
+        0% {
+            opacity: 1;
+            transform: translate3d(0, 0, 0);
+        }
+        100% {
+            transform: translate3d(0, 4.2%, 0);
+        }
+    }
+    circle.st3:nth-child(1n + 4) {
+        display: block;
+    }
+
+    circle:nth-child(5) {
+        animation: log-move 1s linear infinite;
+    }
+    circle:nth-child(6) {
+        animation: log-move 1s  linear infinite;
+        animation-delay: -1s;
+    }
+}
 
