--- a/webapp/src/app/power-control/power-control.component.scss
+++ b/webapp/src/app/power-control/power-control.component.scss
@@ -9,6 +9,10 @@
     cursor: pointer;
 }
 
+.st3:nth-child(2) {
+    cursor: pointer;;
+}
+
 #cic {
     circle.st3:nth-child(1n + 6) {
         display: none;
@@ -59,7 +63,7 @@
 }
 
 #sci {
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: none;
     }
 }
@@ -74,18 +78,19 @@
             transform: translate3d(-7.9%, 0, 0);
         }
     }
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: block;
+        pointer-events: none;
     }
 
-    circle:nth-child(4) {
+    circle:nth-child(5) {
         animation: sci-move 2s  linear infinite;
     }
-    circle:nth-child(5) {
+    circle:nth-child(6) {
         animation: sci-move 2s  linear infinite;
         animation-delay: -1s;
     }
-    circle:nth-child(6) {
+    circle:nth-child(7) {
         animation: sci-move 2s  linear infinite;
         animation-delay: -2s;
     }
@@ -138,7 +143,7 @@
 }
 
 #med {
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: none;
     }
 }
@@ -153,29 +158,29 @@
             transform: translate3d(-12.75%, 0, 0);
         }
     }
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: block;
     }
 
-    circle:nth-child(4) {
-        animation: med-move 3s  linear infinite;
-    }
     circle:nth-child(5) {
         animation: med-move 3s  linear infinite;
-        animation-delay: -1s;
     }
     circle:nth-child(6) {
         animation: med-move 3s  linear infinite;
-        animation-delay: -2s;
+        animation-delay: -1s;
     }
     circle:nth-child(7) {
+        animation: med-move 3s  linear infinite;
+        animation-delay: -2s;
+    }
+    circle:nth-child(8) {
         animation: med-move 3s  linear infinite;
         animation-delay: -3s;
     }
 }
 
 #parcel_og {
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: none;
     }
 }
@@ -190,7 +195,7 @@
             transform: translate3d(-59.75%, 0, 0);
         }
     }
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: block;
     }
 
@@ -256,7 +261,7 @@
 }
 
 #fc {
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: none;
     }
 }
@@ -271,8 +276,9 @@
             transform: translate3d(-20.75%, 0, 0);
         }
     }
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: block;
+        pointer-events: none;
     }
 
     circle:nth-child(5) {
@@ -305,7 +311,7 @@
 }
 
 #adm {
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: none;
     }
 }
@@ -320,7 +326,7 @@
             transform: translate3d(-7.5%, 0, 0);
         }
     }
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: block;
     }
 
@@ -338,7 +344,7 @@
 }
 
 #messhall {
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: none;
     }
 }
@@ -353,7 +359,7 @@
             transform: translate3d(0, 16.0%, 0);
         }
     }
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: block;
     }
 
@@ -379,7 +385,7 @@
 }
 
 #gate {
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: none;
     }
 }
@@ -394,7 +400,7 @@
             transform: translate3d(0, 19.8%, 0);
         }
     }
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: block;
     }
 
@@ -420,7 +426,7 @@
 }
 
 #log {
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: none;
     }
 }
@@ -435,7 +441,7 @@
             transform: translate3d(0, 4.2%, 0);
         }
     }
-    circle.st3:nth-child(1n + 4) {
+    circle.st3:nth-child(1n + 5) {
         display: block;
     }
 
@@ -445,6 +451,101 @@
     circle:nth-child(6) {
         animation: log-move 1s  linear infinite;
         animation-delay: -1s;
+    }
+}
+
+#courtyard {
+    circle.st3:nth-child(1n + 7) {
+        display: none;
+    }
+}
+
+#courtyard.animate {
+    @keyframes courtyard-move {
+        0% {
+            transform: translate3d(0, 0, 0);
+        }
+        30% {
+            transform: translate3d(21.985%, 0, 0);
+        }
+        90% {
+            transform: translate3d(21.985%, -39.4%, 0);
+        }
+        100% {
+            transform: translate3d(16.5%, -39.4%, 0);
+        }
+    }
+
+    circle.st3:nth-child(1n + 7) {
+        display: block;
+    }
+
+    circle:nth-child(7) {
+        animation: courtyard-move 16s linear infinite;
+    }
+    circle:nth-child(8) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -1s;
+    }
+    circle:nth-child(9) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -2s;
+    }
+    circle:nth-child(10) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -3s;
+    }
+    circle:nth-child(11) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -4s;
+    }
+    circle:nth-child(12) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -5s;
+    }
+    circle:nth-child(13) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -6s;
+    }
+    circle:nth-child(14) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -7s;
+    }
+    circle:nth-child(15) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -8s;
+    }
+    circle:nth-child(16) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -9s;
+    }
+    circle:nth-child(17) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -10s;
+    }
+    circle:nth-child(18) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -11s;
+    }
+    circle:nth-child(19) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -12s;
+    }
+    circle:nth-child(20) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -13s;
+    }
+    circle:nth-child(21) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -14s;
+    }
+    circle:nth-child(22) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -15s;
+    }
+    circle:nth-child(23) {
+        animation: courtyard-move 16s  linear infinite;
+        animation-delay: -16s;
     }
 }
 
