--- a/webapp/src/app/speaker-fluff/speaker-fluff.component.html
+++ b/webapp/src/app/speaker-fluff/speaker-fluff.component.html
@@ -10,7 +10,7 @@
         <th>File</th>
         <th style="width: 64px;">Command</th>
     </tr>
-    <tr *ngFor="let file of flufftFiles; index as idx">
+    <tr *ngFor="let file of fluffFiles; index as idx">
         <td>{{idx}}</td>
         <td>{{file}}</td>
         <td><ph-button [value]="file" (click)="playAnnoucement(file)">PLAY</ph-button></td>
