Added new bomb controls

--- a/webapp/src/app/dashboard/dashboard.component.html
+++ b/webapp/src/app/dashboard/dashboard.component.html
@@ -27,7 +27,10 @@
             <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'FLUFF'" [subtitle]="'TR2805'" style="grid-row:19/36; grid-column: 38/58">
                 <speaker-fluff></speaker-fluff>
             </ph-window>
-            <ph-window *ngIf="auth.role == 'admin' && this.tab == 'DRONE'" [title]="'DRONE'" [subtitle]="'TR2805'" style="grid-row:1/10; grid-column: 1/28">
+            <ph-window *ngIf="auth.role == 'admin' && this.tab == 'DRONE'" [title]="'EXPLOSIONS'" [subtitle]="'TR2805'" style="grid-row:1/32; grid-column: 1/46">
+                <drone-bombardment></drone-bombardment>
+            </ph-window>
+            <ph-window *ngIf="auth.role == 'admin' && this.tab == 'DRONE'" [title]="'DRONE'" [subtitle]="'TR2805'" style="grid-row:1/16; grid-column: 46/66">
                 <drone-control></drone-control>
             </ph-window>
         </div>
