--- a/webapp/src/app/drone-control/drone-control.component.html
+++ b/webapp/src/app/drone-control/drone-control.component.html
@@ -22,3 +22,16 @@
         <td><ph-button [value]="item.file" (click)="playSound(item.file)">PLAY</ph-button></td>
     </tr>
 </ph-table>
+
+<ph-table [label]="'Bombs'">
+    <tr>
+        <th style="width: 32px;">ID</th>
+        <th>File</th>
+        <th style="width: 64px;">Command</th>
+    </tr>
+    <tr *ngFor="let item of bombSounds; index as idx">
+        <td>{{idx}}</td>
+        <td>{{item.label}}</td>
+        <td><ph-button [value]="item.file" (click)="playSound(item.file)">FIRE!</ph-button></td>
+    </tr>
+</ph-table>
