Fixed bug with cue adressing

--- a/webapp/src/app/drone-bombardment/drone-bombardment.component.html
+++ b/webapp/src/app/drone-bombardment/drone-bombardment.component.html
@@ -62,14 +62,14 @@
 	</g>
 </g>
 <g id="icons">
-    <g id="corridor">
+    <g id="corridor" (click)="bombArea(BombAreaId.AREA_CORRIDOR)" [class.fused]="this.areaStates.get(BombAreaId.AREA_CORRIDOR) == BombAreaState.STATE_FUSED">
         <circle class="st3" cx="210.8" cy="131.9" r="6.3"/>
         <path class="st4" d="M208.2,135.5c-0.2,0-0.4-0.1-0.5-0.2s-0.2-0.3-0.2-0.5v-1.5c0-0.2,0.1-0.4,0.2-0.5c0.1-0.1,0.3-0.2,0.5-0.2
             h5.3c0.2,0,0.4,0.1,0.5,0.2c0.1,0.1,0.2,0.3,0.2,0.5v1.5c0,0.2-0.1,0.4-0.2,0.5c-0.1,0.1-0.3,0.2-0.5,0.2H208.2z M208.2,134.7h5.3
             v-1.5h-5.3V134.7z M208.8,131.9l-1.9-1.1l2.3-0.4l-0.6-2.2l1.9,1.3l1.1-2l0.4,2.3l2.2-0.6l-1.3,1.9l1.4,0.8h-1.5l-1-0.6l0.6-0.8
             l-1,0.3l-0.2-1l-0.5,0.9l-0.8-0.6l0.3,1l-1,0.2l1.1,0.7H208.8z"/>
     </g>
-    <g id="med">
+    <g id="med" (click)="bombArea(BombAreaId.AREA_MED)" [class.fused]="this.areaStates.get(BombAreaId.AREA_MED) == BombAreaState.STATE_FUSED">
         <circle class="st3" cx="258.7" cy="62.8" r="6.3"/>
         <path class="st4" d="M256,66.4c-0.2,0-0.4-0.1-0.5-0.2c-0.1-0.1-0.2-0.3-0.2-0.5v-1.5c0-0.2,0.1-0.4,0.2-0.5
             c0.1-0.1,0.3-0.2,0.5-0.2h5.3c0.2,0,0.4,0.1,0.5,0.2c0.1,0.1,0.2,0.3,0.2,0.5v1.5c0,0.2-0.1,0.4-0.2,0.5c-0.1,0.1-0.3,0.2-0.5,0.2
@@ -78,7 +78,7 @@
             c0.4,0.3,0.9,0.1,1.1-0.2l0.7-1.3l0.2,1.4c0.1,0.4,0.5,0.7,1,0.6l1.4-0.4l-0.9,1.2c-0.3,0.4-0.1,0.9,0.2,1.1l0.7,0.4h-1.3
             c-0.1,0-0.3,0-0.4-0.1l-0.8-0.5l0.6-0.8l-1,0.3l-0.2-1l-0.5,0.9l-0.8-0.6l0.3,1l-1,0.2l1.1,0.7H256.8z"/>
     </g>
-    <g id="cic">
+    <g id="cic" (click)="bombArea(BombAreaId.AREA_CIC)" [class.fused]="this.areaStates.get(BombAreaId.AREA_CIC) == BombAreaState.STATE_FUSED">
         <circle class="st3" cx="284.3" cy="132.4" r="6.3"/>
         <path class="st4" d="M281.6,136c-0.2,0-0.4-0.1-0.5-0.2s-0.2-0.3-0.2-0.5v-1.5c0-0.2,0.1-0.4,0.2-0.5s0.3-0.2,0.5-0.2h5.3
             c0.2,0,0.4,0.1,0.5,0.2s0.2,0.3,0.2,0.5v1.5c0,0.2-0.1,0.4-0.2,0.5s-0.3,0.2-0.5,0.2H281.6z M282.4,135.3h3.8
@@ -87,7 +87,7 @@
             l0.2,1.4c0.1,0.4,0.5,0.7,1,0.6l1.4-0.4l-0.9,1.2c-0.3,0.4-0.1,0.9,0.2,1.1l0.7,0.4h-1.3c-0.1,0-0.3,0-0.4-0.1l-0.8-0.5l0.6-0.8
             l-1,0.3l-0.2-1l-0.5,0.9l-0.8-0.6l0.3,1l-1,0.2l1.1,0.7H282.4z"/>
     </g>
-    <g id="hall">
+    <g id="hall" (click)="bombArea(BombAreaId.AREA_HALL)" [class.fused]="this.areaStates.get(BombAreaId.AREA_HALL) == BombAreaState.STATE_FUSED">
         <circle class="st3" cx="299.7" cy="228" r="6.3"/>
         <path class="st4" d="M297.1,231.6c-0.2,0-0.4-0.1-0.5-0.2s-0.2-0.3-0.2-0.5v-1.5c0-0.2,0.1-0.4,0.2-0.5c0.1-0.1,0.3-0.2,0.5-0.2
             h5.3c0.2,0,0.4,0.1,0.5,0.2c0.1,0.1,0.2,0.3,0.2,0.5v1.5c0,0.2-0.1,0.4-0.2,0.5c-0.1,0.1-0.3,0.2-0.5,0.2H297.1z M297.8,230.9h3.8
@@ -96,7 +96,7 @@
             c0.1,0.4,0.5,0.7,1,0.6l1.4-0.4l-0.9,1.2c-0.3,0.4-0.1,0.9,0.2,1.1l0.7,0.4h-1.3c-0.1,0-0.3,0-0.4-0.1l-0.8-0.5l0.6-0.8l-1,0.3
             l-0.2-1l-0.5,0.9l-0.8-0.6l0.3,1l-1,0.2l1.1,0.7H297.8z"/>
     </g>
-    <g id ="sci">
+    <g id ="sci"  (click)="bombArea(BombAreaId.AREA_SCI)" [class.fused]="this.areaStates.get(BombAreaId.AREA_SCI) == BombAreaState.STATE_FUSED">
         <circle class="st3" cx="385.4" cy="228.6" r="6.3"/>
         <path class="st4" d="M382.7,232.2c-0.2,0-0.4-0.1-0.5-0.2c-0.1-0.1-0.2-0.3-0.2-0.5v-1.5c0-0.2,0.1-0.4,0.2-0.5s0.3-0.2,0.5-0.2
             h5.3c0.2,0,0.4,0.1,0.5,0.2s0.2,0.3,0.2,0.5v1.5c0,0.2-0.1,0.4-0.2,0.5c-0.1,0.1-0.3,0.2-0.5,0.2H382.7z M383.5,231.4h3.8
@@ -105,7 +105,7 @@
             l0.2,1.4c0.1,0.4,0.5,0.7,1,0.6l1.4-0.4l-0.9,1.2c-0.3,0.4-0.1,0.9,0.2,1.1l0.7,0.4h-1.3c-0.1,0-0.3,0-0.4-0.1l-0.8-0.5l0.6-0.8
             l-1,0.3l-0.2-1l-0.5,0.9l-0.8-0.6l0.3,1l-1,0.2l1.1,0.7H383.5z"/>
     </g>
-    <g id="tec">
+    <g id="tec"  (click)="bombArea(BombAreaId.AREA_TEC)" [class.fused]="this.areaStates.get(BombAreaId.AREA_TEC) == BombAreaState.STATE_FUSED">
         <circle class="st3" cx="475.2" cy="205" r="6.3"/>
         <path class="st4" d="M472.6,208.6c-0.2,0-0.4-0.1-0.5-0.2s-0.2-0.3-0.2-0.5v-1.5c0-0.2,0.1-0.4,0.2-0.5c0.1-0.1,0.3-0.2,0.5-0.2
             h5.3c0.2,0,0.4,0.1,0.5,0.2c0.1,0.1,0.2,0.3,0.2,0.5v1.5c0,0.2-0.1,0.4-0.2,0.5s-0.3,0.2-0.5,0.2H472.6z M473.3,207.8h3.8
