--- a/webapp/src/app/dashboard/dashboard.component.html
+++ b/webapp/src/app/dashboard/dashboard.component.html
@@ -15,8 +15,11 @@
             <ph-window *ngIf="this.tab == 'GNRL'" [title]="'POWER PLANT'" [subtitle]="'TR2805'" style="grid-row:1/5; grid-column: 1/38">
                 <app-power-plant></app-power-plant>
             </ph-window>
-            <ph-window *ngIf="this.tab == 'GNRL'" [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:5/36; grid-column: 1/38">
+            <!-- <ph-window *ngIf="this.tab == 'GNRL'" [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:5/36; grid-column: 1/38">
                 <app-power-control></app-power-control>
+            </ph-window> -->
+            <ph-window *ngIf="this.tab == 'GNRL'" [title]="'BASE POWER GRID'" [subtitle]="'GRD8015'" style="grid-row:5/36; grid-column: 1/38">
+                <lsx-light-control></lsx-light-control>
             </ph-window>
             <ph-window *ngIf="auth.role == 'admin' && this.tab == 'GNRL'" [title]="'LOCKDOWN'" [subtitle]="'TR2805'" style="grid-row:1/6; grid-column: 38/58">
                 <base-lockdown></base-lockdown>
