--- a/webapp/src/app/light-control/light-control.component.html
+++ b/webapp/src/app/light-control/light-control.component.html
@@ -1,12 +1,23 @@
 <ph-form>
     <ph-group [label]="light.label" *ngFor="let light of this.service.lights">
-        <ph-button-select [label]="'State'" [(value)]="light.switchState" (valueChange)="onLightSwitchStateChange(light.id, $event)">
+        <ph-button-select [label]="'Switch'" [(value)]="light.switchState" (valueChange)="onLightSwitchStateChange(light.id, $event)">
             <ph-button [value]="lightSwitchState.SWITCH_STATE_OFF">OFF</ph-button>
             <ph-button [value]="lightSwitchState.SWITCH_STATE_ON">ON</ph-button>
         </ph-button-select>
         <ph-button-select [label]="'Lock'" [(value)]="light.lockState" (valueChange)="onLightLockStateChange(light.id, $event)">
-            <ph-button [value]="lightLockState.LOCK_STATE_UNLOCKED">UNLOCKED</ph-button>
-            <ph-button [value]="lightLockState.LOCK_STATE_LOCKED">LOCKED</ph-button>
+            <ph-button [value]="lightLockState.LOCK_STATE_UNLOCKED">OFF</ph-button>
+            <ph-button [value]="lightLockState.LOCK_STATE_LOCKED">ON</ph-button>
+        </ph-button-select>
+        <ph-button-select [label]="'Power'" [(value)]="light.powerState" >
+            <ph-button [value]="lightPowerState.POWER_STATE_UNPOWERED">OFF</ph-button>
+            <ph-button [value]="lightPowerState.POWER_STATE_CRITICAL">CRITICAL</ph-button>
+            <ph-button [value]="lightPowerState.POWER_STATE_POWERED">ON</ph-button>
+        </ph-button-select>
+        <ph-button-select [label]="'DMX'" [(value)]="light.switchState" (valueChange)="onLightSwitchStateChange(light.id, $event)">
+            <ph-button [value]="lightDMXState.DMX_STATE_OFF">OFF</ph-button>
+            <ph-button [value]="lightDMXState.DMX_STATE_RED">RED</ph-button>
+            <ph-button [value]="lightDMXState.DMX_STATE_WHITE">WHITE</ph-button>
+            <ph-button [value]="lightDMXState.DMX_STATE_FLICKER">FLICKER</ph-button>
         </ph-button-select>
     </ph-group>
 </ph-form>
