--- a/webapp/src/app/light-control/light-control.component.html
+++ b/webapp/src/app/light-control/light-control.component.html
@@ -8,12 +8,12 @@
             <ph-button [value]="lightLockState.LOCK_STATE_UNLOCKED">OFF</ph-button>
             <ph-button [value]="lightLockState.LOCK_STATE_LOCKED">ON</ph-button>
         </ph-button-select>
-        <ph-button-select [label]="'Power'" [(value)]="light.powerState" >
+        <ph-button-select [label]="'Power'" [(value)]="light.powerState" (valueChange)="onLightPowerStateChange(light.id, $event)">
             <ph-button [value]="lightPowerState.POWER_STATE_UNPOWERED">OFF</ph-button>
             <ph-button [value]="lightPowerState.POWER_STATE_CRITICAL">CRITICAL</ph-button>
             <ph-button [value]="lightPowerState.POWER_STATE_POWERED">ON</ph-button>
         </ph-button-select>
-        <ph-button-select [label]="'DMX'" [(value)]="light.switchState" (valueChange)="onLightSwitchStateChange(light.id, $event)">
+        <ph-button-select [label]="'DMX'" [(value)]="light.dmxState" (valueChange)="onLightDMXStateChange(light.id, $event)">
             <ph-button [value]="lightDMXState.DMX_STATE_OFF">OFF</ph-button>
             <ph-button [value]="lightDMXState.DMX_STATE_RED">RED</ph-button>
             <ph-button [value]="lightDMXState.DMX_STATE_WHITE">WHITE</ph-button>
