--- a/webapp/src/styles.scss
+++ b/webapp/src/styles.scss
@@ -36,3 +36,27 @@ html, body {
 // div {
 //     box-sizing: content-box;
 // }
+
+/* width */
+::-webkit-scrollbar {
+    display: none !important;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    // box-shadow: inset 0 0 5px grey; 
+    // border-radius: 10px;
+    display: none !important;
+
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    display: none !important;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    display: none !important;
+}
+
